Fixing button spacing again.

--- a/teams-fall2023/TheDugtrio/index.css
+++ b/teams-fall2023/TheDugtrio/index.css
@@ -28,7 +28,7 @@ h1, h2, h3 {
 .button-container {
     display: flex;
     justify-content: space-around;
-    margin: 10px 0;
+    margin: 15px 0;
 }
 
 .button {
